--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,24 @@
         <FrameLayout
             android:id="@+id/frame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight="1">
+            <!--Weight a um faz com que funcione-->
+
         </FrameLayout>
+
+        <TextView
+            android:id="@+id/risk"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/reduced"
+            android:text="@string/reduced"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_gravity="bottom"
+            android:gravity="center">
+        </TextView>
 
     </LinearLayout>
 
