--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -3,15 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapFragment">
+    tools:context=".RegisterFragment">
 
-    <ImageView
-        android:id="@+id/map_view"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/temp_map"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop">
-    </ImageView>
+        android:text="Teste" />
 
 </FrameLayout>
