--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -7,11 +7,11 @@
 
     <ImageView
         android:id="@+id/map_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/temp_map"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop">
+        android:scaleType="fitXY">
     </ImageView>
 
 </FrameLayout>
