--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="very_high">#FF1717</color>
     <color name="maximum">#8C0000</color>
 
+    <color name="button_color">#53A5E0</color>
 </resources>
