--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -42,7 +42,7 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:gravity="center"
-                    android:text="">
+                    android:text="Text Localization">
 
                 </TextView>
 
@@ -74,7 +74,7 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:gravity="center"
-                    android:text="">
+                    android:text="Text Data">
 
                 </TextView>
 
@@ -85,7 +85,7 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:gravity="center"
-                    android:text="">
+                    android:text="Text State">
 
                 </TextView>
 
@@ -247,7 +247,7 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:gravity="center"
-                    android:text="">
+                    android:text="Text Observations">
 
                 </TextView>
 
